--- a/app/src/main/res/layout/bottom_navigation_view.xml
+++ b/app/src/main/res/layout/bottom_navigation_view.xml
@@ -7,12 +7,13 @@
         android:layout_alignParentBottom="true">
 
         <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
+            android:id="@+id/bottomNavViewBar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/bottomNavViewBar"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:background="@drawable/bottom_border"
-            app:menu="@menu/bottom_navigation_menu"
-            >
+            app:menu="@menu/bottom_navigation_menu">
 
         </com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx>
     </RelativeLayout>
